Fix height issue in card on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -311,3 +311,9 @@ ul { padding: 0; margin: 0; }
 @media screen and (max-width: 600px) {
   .span_2_of_2, .span_1_of_2 { width: 100%; }
 }
+
+@media screen and (max-width: 600px) {
+	.card {
+		height: auto;
+	}
+}
